crates/vize_musea/src/transform/snapshots/vize_musea__transform__to_csf__tests__transform_multiple_variants.snap
---
source: crates/vize_musea/src/transform/to_csf.rs
expression: csf
---
CsfOutput {
    code: "import type { Meta, StoryObj } from '@storybook/vue3';\nimport Component from './Button.vue';\n\nconst meta: Meta<typeof Component> = {\n  title: 'Button',\n  component: Component,\n  tags: ['autodocs'],\n};\n\nexport default meta;\ntype Story = StoryObj<typeof meta>;\n\nexport const Primary: Story = {\n  render: (args) => ({\n    components: { Component },\n    setup() {\n      return { args };\n    },\n    template: `<Button variant=\"primary\">Primary</Button>`,\n  }),\n};\n\nexport const Secondary: Story = {\n  render: (args) => ({\n    components: { Component },\n    setup() {\n      return { args };\n    },\n    template: `<Button variant=\"secondary\">Secondary</Button>`,\n  }),\n};\n\n",
    filename: ".stories.ts",
}
