crates/vize_musea/src/transform/snapshots/vize_musea__transform__to_csf__tests__transform_with_category.snap
---
source: crates/vize_musea/src/transform/to_csf.rs
expression: csf
---
CsfOutput {
    code: "import type { Meta, StoryObj } from '@storybook/vue3';\nimport Component from './Button.vue';\n\nconst meta: Meta<typeof Component> = {\n  title: 'atoms/Button',\n  component: Component,\n  tags: ['autodocs'],\n};\n\nexport default meta;\ntype Story = StoryObj<typeof meta>;\n\nexport const Default: Story = {\n  render: (args) => ({\n    components: { Component },\n    setup() {\n      return { args };\n    },\n    template: `<Button>Click</Button>`,\n  }),\n};\n\n",
    filename: ".stories.ts",
}
